[project]
name = "skbundle"
description = "A collection of custom nodes designed to enhance your workflow in ComfyUI. These nodes were developed to meet my own needs while working with ComfyUI. Although I'm not a programmer, I created these nodes with the help of Cursor AI and will continue to develop them over time."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["torch>=2.0.0", "numpy>=1.24.0", "Pillow>=10.0.0", "scipy>=1.10.0", "scikit-image>=0.21.0"]

[project.urls]
Repository = "https://github.com/SKBv0/ComfyUI_SKBundle"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_SKBundle"
Icon = ""
