[project]
name = "skbundle"
description = "Nodes: MultiText, TextBox, TitlePlus, SeamlessTexture, AspectRatioPlus, DisplayEverything, ComparerPlus, AnySwitch, Node Design Tools..."
version = "1.0.2"
license = {file = "LICENSE"}
dependencies = ["torch>=2.0.0", "numpy>=1.24.0", "Pillow>=10.0.0", "scipy>=1.10.0", "scikit-image>=0.21.0"]

[project.urls]
Repository = "https://github.com/SKBv0/ComfyUI_SKBundle"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "skb"
DisplayName = "ComfyUI_SKBundle"
Icon = ""
